--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,11 @@
     <meta name="author" content="" />
 
     <title>ServiYa</title>
+    <link
+      rel="icon"
+      href="/images/logoserviya-removebg-preview.png"
+      type="image/png"
+    />
 
     <!-- slider stylesheet -->
     <link
