Add Google Analytics tracking code to HTML files

--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,21 @@
       </div>
     </footer>
     <!-- footer section -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-85QQT4H0TV"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
+      gtag("config", "G-85QQT4H0TV");
+    </script>
+    <!-- end Google tag (gtag.js) -->
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
