--- a/descargarapp.html
+++ b/descargarapp.html
@@ -149,6 +149,21 @@
       </div>
     </footer>
     <!-- footer section -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-85QQT4H0TV"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-85QQT4H0TV");
+    </script>
+    <!-- end Google tag (gtag.js) -->
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
